--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>
         Lectrum Education
     </title>
-<link rel="shortcut icon" href="/react-offline-intensive/lectrum-favicon-512x512.png"><link href="/react-offline-intensive/css/main.39159.0.css" rel="stylesheet"></head>
+<link rel="shortcut icon" href="/react-offline-intensive/lectrum-favicon-512x512.png"><link href="/react-offline-intensive/css/main.53acb.0.css" rel="stylesheet"></head>
 
 <body>
     <div id="app"></div>
     <div id="spinner"></div>
-<script type="text/javascript" src="/react-offline-intensive/js/main.7354b.0.js"></script></body>
+<script type="text/javascript" src="/react-offline-intensive/js/main.9edd2.0.js"></script></body>
 
 </html>
